@@ -29,7 +29,18 @@
   output at all (`main ERROR Reconfiguration failed: No configuration
   found for '<hash>' at 'null' in 'null'` on every container start,
   confirmed the hard way across several real CI runs - see DEFENSE.md
-  #26). License header preserved as-is in the copied file.
+  #32 (also ported to main as its own entry, #26). License header
+  preserved as-is in the copied file.
+- config/flink/config.yaml's `env.java.opts.all` line — verbatim copy of
+  the same key/value from Flink 2.1's own default `flink-dist/src/main/
+  resources/config.yaml` (`apache/flink`, `release-2.1` branch), not
+  reconstructed or abbreviated. Same root cause as the entry above:
+  the conf bind mount replaces Flink's own config.yaml too, and this
+  project's file (adapted from a pre-Java21 reference) never carried
+  these Java 17+ `--add-opens`/`--add-exports` defaults forward, which
+  surfaced as a real checkpoint failure (Kryo reflecting into
+  `java.nio.ByteBuffer` under Java 21's module system) - see DEFENSE.md
+  #35.
 
 ## Read as reference, written independently
 
